--- a/bedrock/firefox/templates/firefox/campaign/unfck.html
+++ b/bedrock/firefox/templates/firefox/campaign/unfck.html
@@ -65,9 +65,9 @@
         <img class="c-item-gif" src="{{ static('img/firefox/campaign/unfck/firecode.gif') }}">
         <ul class="c-item-share">
           <!-- TODO: GA props -->
-          <li><a class="js-twitter-share" target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/intent/tweet?url=https%3A%2F%2Fmzl.la%2Fmanifesto&text=I+support+the+vision+of+a+better%2C+healthier+internet+from+%40mozilla%2C+will+you+join+me%3F" data-link-type="social share" data-link-name="Twitter"><span class="twitter"></span>Share</a></li>
-          <li><a href="{{ static('img/firefox/campaign/unfck/firecode.gif') }}" download><span class="download"></span>Download</a></li>
-          <li><button class="js-copy-link" type="button" data-clipboard-text="https://bukk.it/firecode.gif"><span class="link"></span>Copy Link</button></li>
+          <li><a class="c-item-link js-twitter-share" target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/intent/tweet?url=https%3A%2F%2Fmzl.la%2Fmanifesto&text=I+support+the+vision+of+a+better%2C+healthier+internet+from+%40mozilla%2C+will+you+join+me%3F" data-link-type="social share" data-link-name="Twitter"><span class="c-item-icon twitter"></span><span class="c-item-text">Share</span></a></li>
+          <li><a class="c-item-link" href="{{ static('img/firefox/campaign/unfck/firecode.gif') }}" download><span class="c-item-icon download"></span><span class="c-item-text">Download</span></a></li>
+          <li><button class="c-item-link js-copy-link" type="button" data-clipboard-text="https://bukk.it/firecode.gif"><span class="c-item-icon link"></span><span class="c-item-text">Copy Link</span></button></li>
         </ul>
       </div>
     </div>
