--- a/media/css/firefox/unfck.scss
+++ b/media/css/firefox/unfck.scss
@@ -21,11 +21,12 @@ $image-path: '/media/protocol/img';
 $svg-icon-twitter: '<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M5.032 14.5c6.037 0 9.34-5.002 9.34-9.34 0-.142 0-.283-.01-.424A6.679 6.679 0 0 0 16 3.037c-.6.266-1.235.44-1.885.517a3.294 3.294 0 0 0 1.443-1.816 6.579 6.579 0 0 1-2.085.797A3.286 3.286 0 0 0 7.88 5.528 9.32 9.32 0 0 1 1.114 2.1 3.285 3.285 0 0 0 2.13 6.481 3.258 3.258 0 0 1 .64 6.07v.041A3.284 3.284 0 0 0 3.274 9.33c-.484.132-.99.151-1.483.056a3.286 3.286 0 0 0 3.067 2.28A6.587 6.587 0 0 1 0 13.025a9.294 9.294 0 0 0 5.032 1.472" fill="#88ffd1" fill-rule="nonzero"/></svg>';
 $svg-icon-download: '<svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round"><g transform="translate(6.000000, 3.000000)" stroke="#88ffd1" stroke-width="2"><path d="M0,18 L12,18"></path><polyline stroke-linejoin="round" points="0 8 6 14 12 8"></polyline><path d="M6,0 L6,14"></path></g></g></svg>';
 $svg-icon-link: '<svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><g transform="translate(12.000000, 12.000000) scale(-1, 1) translate(-12.000000, -12.000000) translate(2.000000, 2.000000)" stroke="#88ffd1" stroke-width="2"><path d="M8,11 C8.86895549,12.1616929 10.1996273,12.8887004 11.6466499,12.9923333 C13.0936724,13.0959663 14.5143658,12.5660061 15.54,11.54 L18.54,8.54 C20.434861,6.57810557 20.4077619,3.45957611 18.4790929,1.53090712 C16.5504239,-0.397761869 13.4318944,-0.424861048 11.47,1.47 L9.75,3.18"></path><path d="M12,9 C11.1310445,7.83830708 9.8003727,7.11129957 8.35335013,7.00766666 C6.90632757,6.90403374 5.4856342,7.43399387 4.46,8.46 L1.46,11.46 C-0.434861048,13.4218944 -0.407761869,16.5404239 1.52090712,18.4690929 C3.44957611,20.3977619 6.56810557,20.424861 8.53,18.53 L10.24,16.82"></path></g></g></svg>';
-
+$svg-icon-cta: '<svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><polyline vector-effect="non-scaling-stroke" stroke="#88ffd1" stroke-width="2" points="9 19 16 12 9 5"></polyline></g></svg>';
 
 $icon_twitter: svg-url($svg-icon-twitter);
 $icon_download: svg-url($svg-icon-download);
 $icon_link: svg-url($svg-icon-link);
+$icon_cta: svg-url($svg-icon-cta);
 
 // --------------------------------------------------------------------------
 // Protocol over-rides
@@ -65,8 +66,12 @@ main {
     }
 
     h2, h3, h4 {
-        color: $color-yellow-05;
+        color: $color-white;
         margin-bottom: $spacing-md;
+    }
+
+    h2 {
+        color: $color-yellow-05;
     }
 
     img {
@@ -104,6 +109,10 @@ main {
     }
 
     .mzp-c-cta-link {
+        background: $icon_cta top right no-repeat;
+        background-size: $spacing-md auto;
+        padding-right: $spacing-lg;
+
         &:link,
         &:visited,
         &:hover {
@@ -126,6 +135,24 @@ main {
     top: 100px;
 }
 
+// --------------------------------------------------------------------------
+// hero
+
+.mzp-c-hero .mzp-l-content:before {
+    content: '';
+    display: block;
+    width: 100%;
+    background-image: url('/media/img/firefox/campaign/unfck/hero-wide.png');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 43%; // todo: intrinsic
+    margin: 0 auto $spacing-md auto;
+}
+
+.mzp-c-hero-title {
+    @include visually-hidden;
+}
 
 // --------------------------------------------------------------------------
 // section titles
@@ -176,11 +203,6 @@ main {
     padding: 0;
     text-align: left;
     white-space: nowrap;
-    transition: opacity 0.5s ease-out;
-
-    .c-item-img:hover & {
-        opacity: 1;
-    }
 
     .c-item-share &:link,
     .c-item-share &:visited {
@@ -209,7 +231,7 @@ main {
     display: inline-block;
     height: 24px;
     margin-right: $spacing-sm;
-    opacity: 0.6;
+    opacity: 0.5;
     transition: opacity 0.5s ease-out;
     vertical-align: middle;
     width: 24px;
@@ -355,19 +377,19 @@ main {
     color: $color-white;
 }
 
-.mzp-l-card-half {
+.mzp-l-card-third {
+    margin: 0 auto;
+    max-width: $content-lg;
 
     .mzp-c-card {
-        max-width: 100%;
-
         @media #{$mq-sm} {
             @include bidi((
                 (margin-left, 0, $h-grid-xs),
                 (margin-right, $h-grid-xs, 0),
             ));
-            width: calc(50% - (#{$h-grid-xs} - (#{$h-grid-xs} / 2)));
+            width: calc(50% - (#{$h-grid-xs} / 2));
 
-            main &:nth-child(2n) { // bump the specificity so later media queries don't over write it
+            &:nth-child(even) {
                 margin-left: 0;
                 margin-right: 0;
             }
@@ -378,25 +400,30 @@ main {
                 (margin-left, 0, $h-grid-md),
                 (margin-right, $h-grid-md, 0),
             ));
-            width: calc(50% - (#{$h-grid-md} - (#{$h-grid-md} / 2)));
+            width: calc(50% - (#{$h-grid-md} / 2));
+
+            &:nth-child(even) {
+                margin-left: 0;
+                margin-right: 0;
+            }
         }
 
         @media #{$mq-lg} {
-            @include bidi((
-                (float, left, right),
-                (margin-left, 0, $h-grid-lg),
-                (margin-right, $h-grid-lg, 0),
-            ));
-            width: calc(50% - (#{$h-grid-lg} - (#{$h-grid-lg} / 2)));
+            width: calc(33.3% - (#{$h-grid-lg} - (#{$h-grid-lg} / 3)));
 
-            &:nth-child(2n+1) {
-                @include bidi(((clear, left, right),));
+            &:nth-child(even) {
+                @include bidi((
+                    (margin-left, 0, $h-grid-lg),
+                    (margin-right, $h-grid-lg, 0),
+                ));
+            }
+
+            &:nth-child(3n) {
+                @include bidi(((margin-right, 0, margin-left, 0),));
             }
         }
     }
 }
-
-
 
 
 // --------------------------------------------------------------------------
